Fix overflow

--- a/src/styles/Editor.css
+++ b/src/styles/Editor.css
@@ -1,6 +1,7 @@
 .Editor-content {
   border: 1px solid grey;
   height: 200px;
+  overflow-y: scroll;
 }
 
 .Editor-content p {
